# agentic_quality_check

./: .gitignore  Architecture.md  IMPLEMENTATION_TRACKER.md  README.md  REQUIREMENTS.md  agentic_quality_check_architecture.pptx  app.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt
agentic_quality_check/: databricks.yml  pyproject.toml
agentic_quality_check/pptx/: agentic_quality_check_architecture.pptx
agentic_quality_check/src/: sample_notebook.ipynb
not_for_git/: 1_libraryinstall.ipynb  COLLABORATION_GUIDE.md  generate_architecture_pptx.py
notebooks/: 001.structure_check.ipynb  00_setup.ipynb.ipynb  01_test_extraction.ipynb.ipynb
resources/: agentic_quality_check.yml  sample_job.job.yml
src/: config.py  sample_notebook.ipynb
src/agentic_quality_check/: main.py
src/agents/: __init__.py  table_extractor_agent.py
src/agents/prompts/: __init__.py  table_extraction_prompt.py
src/ui/: __init__.py  components.py  mapping_tab.py  results_tab.py
src/utils/: __init__.py  csv_handler.py  json_storage.py  pdf_parser.py  table_extractor.py
tests/: sample_taxis_test.py  test_json_storage.py  test_table_extractor.py
