[project]
name = "agentic_quality_check"
version = "0.0.1"
authors = [{ name = "gb.burcea@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "streamlit>=1.28.0",
    "anthropic>=0.25.0",
    "pandas>=2.0.0",
    "pypdf>=3.17.0",
    "databricks-sdk>=0.20.0"
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=15.4,<15.5",
    "ipykernel",
]

[project.scripts]
main = "agentic_quality_check.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
